--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 .gradle/*
 build/*
 gradle/*
+src/proto/java/*
+src/proto/python/*
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
