--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 .gradle/*
 build/*
 gradle/*
-src/proto/java/*
-src/proto/python/*
+src/main/java/org/example/socket/proto/java/*
+src/main/java/org/example/socket/proto/python/*
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
